--- a/my-group/package.json
+++ b/my-group/package.json
@@ -18,6 +18,9 @@
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
+    "@babel/cli": "^7.28.6",
+    "@babel/core": "^7.28.6",
+    "@babel/preset-env": "^7.28.6",
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -28,6 +31,9 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "vite": "npm:rolldown-vite@7.2.5"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.5"
