--- a/my-group/package.json
+++ b/my-group/package.json
@@ -15,6 +15,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
+    "rollup": "^4.57.1",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
@@ -26,18 +27,13 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "babel-plugin-react-compiler": "^1.0.0",
-    "eslint": "^9.39.1",
+    "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "npm:rolldown-vite@7.2.5"
+    "vite": "^7.3.1"
   },
-
- "engines": {
+  "engines": {
     "node": "24.x"
-  },
-
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.5"
   }
 }
